<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_email"
        android:hint="@string/email_adress"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="16dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/frame_et"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="16dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/frame_et"
         android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="@id/et_password"
        android:textColor="@color/red"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        app:cornerRadius="16dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        />

</androidx.constraintlayout.widget.ConstraintLayout>