<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <ImageView
        android:id="@+id/iv_menu"
        android:layout_margin="32dp"
        android:src="@drawable/ic_profile_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:layout_margin="32dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back_iv_prof"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_ch_th_fod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_the_food"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="@id/iv_menu"
        app:layout_constraintTop_toBottomOf="@id/iv_menu"/>
    <TextView
        android:id="@+id/tv_fod_u_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_you_love"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_ch_th_fod"
        app:layout_constraintTop_toBottomOf="@id/tv_ch_th_fod"/>

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/frame_et"
        android:hint="@string/search"
        android:textColor="@color/black"
        android:paddingStart="32dp"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_fod_u_l"
        />
    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cotegory"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/et_search"
        app:layout_constraintStart_toStartOf="@id/et_search"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        tools:listitem="@layout/category_item"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/rv_food"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        />
<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_food"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginBottom="16dp"
    tools:orientation="horizontal"
    tools:listitem="@layout/rv_food_item"
    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_constraintTop_toBottomOf="@id/rv_category"
    app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>